// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ascend connect chain1 is longer than chain2 chain1 = [5, 3, 1], chain2 = [4, 2] should return [5, 4, 3, 2, 1] 1`] = `
LNode {
  "data": 0,
  "next": LNode {
    "data": 5,
    "next": LNode {
      "data": 4,
      "next": LNode {
        "data": 3,
        "next": LNode {
          "data": 2,
          "next": LNode {
            "data": 1,
            "next": null,
          },
        },
      },
    },
  },
}
`;

exports[`ascend connect chain1 is longer than chain2 chain1 = [5, 3, 1], chain2 = [6, 2] should return [6, 5, 3, 2, 1] 1`] = `
LNode {
  "data": 0,
  "next": LNode {
    "data": 6,
    "next": LNode {
      "data": 5,
      "next": LNode {
        "data": 3,
        "next": LNode {
          "data": 2,
          "next": LNode {
            "data": 1,
            "next": null,
          },
        },
      },
    },
  },
}
`;

exports[`ascend connect chain1 is shorter than chain2 chain1 = [3, 1], chain2 = [6, 4, 2] should return [6, 4, 3, 2, 1] 1`] = `
LNode {
  "data": 0,
  "next": LNode {
    "data": 6,
    "next": LNode {
      "data": 3,
      "next": LNode {
        "data": 2,
        "next": LNode {
          "data": 1,
          "next": null,
        },
      },
    },
  },
}
`;

exports[`ascend connect chain1 is shorter than chain2 chain1 = [5, 1], chain2 = [6, 4, 2] should return [6, 5, 4, 2, 1] 1`] = `
LNode {
  "data": 0,
  "next": LNode {
    "data": 6,
    "next": LNode {
      "data": 5,
      "next": LNode {
        "data": 2,
        "next": LNode {
          "data": 1,
          "next": null,
        },
      },
    },
  },
}
`;
